<resources>
    <string name="app_name">GBmulator</string>
    <string name="resume_emulator_button">Resume</string>
    <string name="load_rom_button">Load cartridge</string>
    <string name="link_button">Link cable</string>
    <string name="link_title">Link cable</string>
    <string name="link_dialog_message">Enable bluetooth and continue?</string>
    <string name="link_menu_no_devices">No paired devices</string>
    <string name="link_menu_no_bluetooth">Bluetooth disabled</string>
    <string name="link_menu_label">Or select a device to connect to:</string>
    <string name="reset_rom_button">Restart emulator</string>
    <string name="reset_rom_dialog_message">Any unsaved progress will be lost</string>
    <string name="settings_button">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="loaded_rom_empty_text">Empty cartridge slot</string>
    <string name="playing_rom_text">Playing:</string>
    <string name="setting_set_mode">Emulation mode:</string>
    <string name="setting_set_mode_label">This will restart the emulator and any unsaved progress will be lost</string>
    <string name="setting_mode_dmg">Game Boy</string>
    <string name="setting_mode_cgb">Game Boy\nColor</string>
    <string name="setting_set_palette">Game Boy Palette:</string>
    <string name="setting_set_palette_label">Custom Game Boy colorization</string>
    <string name="setting_palette_orig">Original</string>
    <string name="setting_palette_gray">Grayscale</string>
    <string name="setting_set_sound">Volume level:</string>
    <string name="setting_set_speed">Emulation speed multiplier:</string>
    <string name="setting_speed_label">x%1$.1f</string>
    <string name="setting_volume_label">%1$d%%</string>
    <string name="setting_frame_skip">Frame skip:</string>
    <string name="setting_frame_skip_value">%1$d</string>
    <string name="setting_frame_skip_value_off">OFF</string>
    <string name="setting_opacity">Button opacity:</string>
    <string name="setting_opacity_value">%1$d%%</string>
    <string name="setting_layout_editor">Layout editor</string>
    <string name="setting_layout_editor_label">Customize the screen and buttons size/position for the portrait and landscape layouts</string>
    <string name="setting_layout_editor_popup_label">Select the layout to edit or reset to defaults</string>
    <string name="setting_layout_editor_popup_portrait_button">Portrait</string>
    <string name="setting_layout_editor_popup_landscape_button">Landscape</string>
    <string name="setting_layout_editor_popup_defaults_button">Reset</string>
    <string name="setting_set_camera">Select camera</string>
    <string name="setting_set_camera_label">Sets the camera used for the GB Camera emulation</string>
    <string name="setting_camera_back">Back</string>
    <string name="setting_camera_front">Front</string>
    <string name="setting_drive">Sync with Google Drive</string>
    <string name="setting_drive_label">Tap here to sync the battery save files in your Google Drive account</string>
    <string name="setting_drive_dialog_title">Syncing saves…</string>

    <string name="setting_drive_dialog_sign_in_msg">Signing in your Google Drive account…</string>
    <string name="setting_drive_dialog_fetch_msg">Fetching remote saves…</string>
    <string name="setting_drive_dialog_download_msg">Downloading saves…</string>
    <string name="setting_drive_dialog_upload_msg">Uploading saves…</string>
    <string name="setting_drive_dialog_update_msg">Updating remote saves…</string>

</resources>
